0.2
- Added support for additional fields of the 'date' type (same as datetime
    minus the time)
- Added support for file classes
- Added a fallback message template
- Improved HTML filtering to handle tables correctly
- Improved handling of live URLs with parameters
- Added support for selecting which ordering method the indexer should use
- Added support for logging directly to a file

0.1.12
- Fixed a crash that would occur when deleting articles from the trash
- Fixed a potential crash in our index searcher

0.1.11
- Added Norwegian Nynorsk language support

0.1.10
- Fixed a bug that could cause the article field editor to edit fields
    for the wrong folder if the current revision of the article had a
    different primary folder from the first revision of the article

0.1.9
- Fixed a crash that would occur when uploading new files

0.1.8
- Added the ability to move a file to another folder from the «edit file»
    page

0.1.7
- Fixed a bug that caused folder filtering in the files section to fail

0.1.6
- Fixed a bug causing secondary fields to not get copied to a new revision
    if the secondary fields section was not loaded

0.1.5
- Fixed a bug causing a flood of server requests when the folder tree was
    being initialized
- Fixed an object caching problem that could cause invalid results for
    searches that were using the indexer

0.1.4
- Fixed a bug causing «add to body/lead» not to work
- Turned the «view other versions» link in the files section into a button
- Fixed a problem where Lixuz would throw a 503 error instead of 404 when
    an invalid UID is used in /files/get

0.1.3
- Fixed a bug causing some file identifiers to be generated as numeric-only

0.1.2
- Fixed a bug causing old image captions to be used in articles

0.1.1
- Fixed a problem where requests for data from templates for articles
    with extra or overridden live statuses could return duplicate data

0.1
- Initial release