@@ -7,6 +7,8 @@
 - Improved handling of live URLs with parameters
 - Added support for selecting which ordering method the indexer should use
 - Added support for logging directly to a file
+- Supports selecting multiple files for upload (instead of having to select one
+  file at a time)
 
 0.1.12
 - Fixed a crash that would occur when deleting articles from the trash
